--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
   <head>
@@ -41,6 +40,8 @@
 			// TODO put the ball in the center and have it decide which way to go
 			// TODO cleaner hits
 			// TODO allow switching difficulties
+			// TODO doctype
+			// TODO make 'update yo shit' be something real
 			// DONETODO twitter link
 			// DONETODO clean up all the messy code
 			// DONETODO only clear what needs to clear
