Added some supporting text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       #twitter {
         position: fixed;
         bottom: 30px;
-        left: 20px;
+        left: 30px;
         font-size: 42px;
       }
       a, a:visited {
@@ -30,8 +30,17 @@
       #score {
         position: fixed;
         bottom: 30px;
-        right: 20px;
+        right: 30px;
         font-size: 42px;
+      }
+      #intro {
+        font-size: 24px;
+        position: fixed;
+        top: 30px;
+        left: 30px;
+        width: 400px;
+        line-height: 1em;
+        text-align: left;
       }
     </style>
 
@@ -40,11 +49,18 @@
   <body>
 
     <canvas id="canvas">
-      upgrade yo shit
+      This page is built using a <a href=''>HTML5 <code>&lt;canvas&gt;</code> tag.</a>
+      Unfortunately, it looks like your browser doesn't support that.
+      Maybe you should upgrade to <a href=''>Chrome</a> or <a href=''>Firefox</a>.
     </canvas>
 
     <div id="twitter">
       <a href="http://twitter.com/seejohnrun">@seejohnrun on twitter</a>
+    </div>
+
+    <div id="intro">
+      HTML5 <code>&lt;canvas&gt;</code> is all the rage these days.
+      This pong game uses your scrollbar as the paddle.  Click to start!
     </div>
 
     <div id="score"></div>
@@ -52,10 +68,11 @@
     <script>
       // TODO make the page unable to scroll after its over
       // TODO beautify
-      // TODO arrow to describe the game
       // TODO doctype
-      // TODO make 'update yo shit' be something real
       // TODO paddle hits cleaner - one idea is to shrink the size of the canvas horizontally
+      // TODO get real links for things
+      // DONETODO describe the game
+      // DONETODO make 'update yo shit' be something real
       // DONETODO don't hard code paddle xPos in ball#draw
       // DONETODO fix the stroke clearing issue after the game stops
       // DONETODO keep score on the screen
@@ -262,6 +279,10 @@
       var yourScore = 0;
 
       window.onmouseup = function() {
+
+        // remove the intro box
+        var $intro = document.getElementById('intro');
+        $intro.style.display = 'none';
 
         // Reset the ball before each game
         ball.clear();
