--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       body {
         margin: 0px;
         padding: 0px;
-        font-size: 10px;
         line-height: 1em;
-        background: #eee; 
+        background: #fff; 
       }
       #canvas {
         position: fixed;
@@ -269,6 +268,7 @@
       $canvas.width = document.body.clientWidth;
       $canvas.height = document.body.clientHeight;
       var context = $canvas.getContext('2d');
+      var defaultBackground = document.body.style.background;
 
       // Get a ball and paddle
       var paddle = new Paddle(context, hitterHeight);
@@ -289,7 +289,7 @@
         ball.reset();
 
         // Set the background to a non-error color
-        document.body.style.background = '#eee';
+        document.body.style.background = defaultBackground;
      
         // Keep it moving, bro
         var interval = setInterval(function() {
